--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ starlette==0.41.3
 tomli==2.2.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
+sqlalchemy==2.0.30
+databases==0.9.0
+pytest==8.2.1
+pytest-asyncio==0.23.6
